--- a/01.HTML/01.Restaurant/_includes/header/navigation.jade
+++ b/01.HTML/01.Restaurant/_includes/header/navigation.jade
@@ -13,7 +13,7 @@ ul.nav-links.nav.navbar-nav
             a.sub-menu(href="homepage-3.html")
                span.text Homepage 03
    li(class="#{ current.source == 'about' ? 'active' : '' }")
-      a.main-menu(href="javascript:void(0)")
+      a.main-menu(href="about.html")
          span.text about
    li(class="#{ current.source == 'Reservation' ? 'active' : '' }")
       a.main-menu(href="reservation.html")
