--- a/01.HTML/01.Restaurant/_includes/list-menu/list-menu-2.jade
+++ b/01.HTML/01.Restaurant/_includes/list-menu/list-menu-2.jade
@@ -1,5 +1,5 @@
 .row
-    .col-sm-6
+    .col-md-6
         .menu-items.style-2
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/menu-1.jpg", alt="")
@@ -10,7 +10,7 @@
                         sup $
                         span 54.00
                 .desciption Lorem ipsum dolor sit a met, consec teturie adipisi cing elitse dorem.
-    .col-sm-6
+    .col-md-6
         .menu-items.style-2
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/menu-2.jpg", alt="")
@@ -21,7 +21,7 @@
                         sup $
                         span 65.00
                 .desciption Lorem ipsum dolor sit a met, consec teturie adipisi cing elitse dorem.
-    .col-sm-6
+    .col-md-6
         .menu-items.style-2
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/menu-3.jpg", alt="")
@@ -32,7 +32,7 @@
                         sup $
                         span 73.00
                 .desciption Lorem ipsum dolor sit a met, consec teturie adipisi cing elitse dorem.
-    .col-sm-6
+    .col-md-6
         .menu-items.style-2
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/menu-4.jpg", alt="")
