--- a/01.HTML/01.Restaurant/homepage-3.jade
+++ b/01.HTML/01.Restaurant/homepage-3.jade
@@ -44,7 +44,7 @@ section.about-us-3.padding-top-100.padding-bottom-100
         .content-wrapper
                 .main-title
                     .bg-image
-                        img(src="assets/images/seafood/crawfish.png", alt="")
+                        img.crawfish(src="assets/images/seafood/crawfish.png", alt="")
                     h2.title about us
                 .main-content
                     p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci di dunt ut labore et dolore magna aliqua. Ut enim ad minim reprehederit veniam excepteur sint occacat cupidatat non proident, sunt in culpa qui officia deserunt. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt sed ut perspiciatis unde omnis iste natusluptatem accusantium sunt in culpa qui officia deserunt officia deserunt sed ut perspicia.
@@ -60,7 +60,7 @@ section.special-menu.style-3.padding-top-100.padding-bottom-100
     .container
         .main-title
             .bg-image
-                img(src="assets/images/seafood/clamp.png", alt="")
+                img.clamp(src="assets/images/seafood/clamp.png", alt="")
             h2.title special menu
         .main-content
             != partial("_includes/list-dish")
@@ -70,7 +70,7 @@ section.book-table.style-2
         .content-wrapper.padding-top-100.padding-bottom-100
             .main-title.white
                 .bg-image
-                    img(src="assets/images/seafood/scallop-2.png", alt="")
+                    img.scallop(src="assets/images/seafood/scallop-2.png", alt="")
                 h2.title book your table
             .main-content
                 != partial("_includes/book-table")
@@ -80,7 +80,7 @@ section.our-chefs.padding-top-100.padding-bottom-100
     .container
         .main-title
             .bg-image
-                img(src="assets/images/seafood/swordfish.png", alt="")
+                img.swordfish(src="assets/images/seafood/swordfish.png", alt="")
             h2.title our chefs
         .main-content
             != partial("_includes/our-chefs-list")
