--- a/01.HTML/01.Restaurant/_includes/coming-soon-2.jade
+++ b/01.HTML/01.Restaurant/_includes/coming-soon-2.jade
@@ -1,4 +1,4 @@
-section.coming-soon.padding-top-100.padding-bottom-100
+section.coming-soon.style-2.padding-top-100.padding-bottom-100
     .container
         .main-title-2
             .icons //
