--- a/01.HTML/01.Restaurant/_includes/list-menu/list-menu-2-c.jade
+++ b/01.HTML/01.Restaurant/_includes/list-menu/list-menu-2-c.jade
@@ -1,5 +1,5 @@
 .row
-    .col-sm-6
+    .col-md-6
         .menu-items.style-2
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/menu-9.jpg", alt="")
@@ -10,7 +10,7 @@
                         sup $
                         span 49.00
                 .desciption Lorem ipsum dolor sit a met, consec teturie adipisi cing elitse dorem.
-    .col-sm-6
+    .col-md-6
         .menu-items.style-2
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/menu-10.jpg", alt="")
@@ -21,7 +21,7 @@
                         sup $
                         span 38.00
                 .desciption Lorem ipsum dolor sit a met, consec teturie adipisi cing elitse dorem.
-    .col-sm-6
+    .col-md-6
         .menu-items.style-2
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/menu-11.jpg", alt="")
@@ -32,7 +32,7 @@
                         sup $
                         span 68.00
                 .desciption Lorem ipsum dolor sit a met, consec teturie adipisi cing elitse dorem.
-    .col-sm-6
+    .col-md-6
         .menu-items.style-2
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/menu-12.jpg", alt="")
