--- a/01.HTML/01.Restaurant/_includes/list-menu/list-menu-2-d.jade
+++ b/01.HTML/01.Restaurant/_includes/list-menu/list-menu-2-d.jade
@@ -1,5 +1,5 @@
 .row
-    .col-sm-6
+    .col-md-6
         .menu-items.style-2
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/menu-13.jpg", alt="")
@@ -10,7 +10,7 @@
                         sup $
                         span 48.00
                 .desciption Lorem ipsum dolor sit a met, consec teturie adipisi cing elitse dorem.
-    .col-sm-6
+    .col-md-6
         .menu-items.style-2
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/menu-14.jpg", alt="")
@@ -21,7 +21,7 @@
                         sup $
                         span 55.00
                 .desciption Lorem ipsum dolor sit a met, consec teturie adipisi cing elitse dorem.
-    .col-sm-6
+    .col-md-6
         .menu-items.style-2
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/menu-15.jpg", alt="")
@@ -32,7 +32,7 @@
                         sup $
                         span 54.00
                 .desciption Lorem ipsum dolor sit a met, consec teturie adipisi cing elitse dorem.
-    .col-sm-6
+    .col-md-6
         .menu-items.style-2
             a.item-image(href="#")
                 img.img-responsive(src="assets/images/menu/menu-16.jpg", alt="")
