--- a/01.HTML/01.Restaurant/homepage-2.jade
+++ b/01.HTML/01.Restaurant/homepage-2.jade
@@ -10,7 +10,7 @@ section.homepage-banner.background-video
                 img.img-responsive(src="assets/images/background-full/homepage-2.jpg" alt="")
             .group-title.wow.fadeInDown(data-wow-delay="1s")
                 h1.title WELCOME TO GAMBA RESTAURANT
-                p.text The Seafood Restaurant has been voted by locals as "Best in the area" year after year. We actively seek out the freshest in regional seafood and produce our restaurant is expanding.
+                p.text The Seafood Restaurant has been voted by locals as "Best in the area" year after year. We actively seek out the freshest in regional seafood and produce our restaurant.
             .group-btn.wow.fadeInUp(data-wow-delay="1s")
                 a.btn.btn-left.btn-maincolor(href="#") Resever Now 
                 a.btn.btn-right.btn-transparent(href="#")  purchase now
@@ -24,7 +24,7 @@ section.about-us-2
             .content-wrapper.padding-top-100.padding-bottom-100
                 .main-title
                     .bg-image
-                        img(src="assets/images/seafood/crawfish.png", alt="")
+                        img.crawfish(src="assets/images/seafood/crawfish.png", alt="")
                     h2.title about us
                 .main-content
                     p.text Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor inci di dunt ut labore et dolore magna aliqua. Ut enim ad minim reprehenderit veniam. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
@@ -38,7 +38,7 @@ section.special-menu.style-2.padding-top-100.padding-bottom-100
     .container
         .main-title
             .bg-image
-                img(src="assets/images/seafood/clamp-2.png", alt="")
+                img.clamp(src="assets/images/seafood/clamp-2.png", alt="")
             h2.title special menu
         .main-content
             != partial("_includes/list-dish")
@@ -51,7 +51,7 @@ section.book-table.style-3.padding-top-100.padding-bottom-100
         .content-wrapper
             .main-title
                 .bg-image
-                    img(src="assets/images/seafood/scallop.png", alt="")
+                    img.scallop(src="assets/images/seafood/scallop.png", alt="")
                 h2.title book your table
             .main-content
                 != partial("_includes/book-table")
